# ococo

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  compile_releases.sh  main.cpp  ococo.1  ococo.cpp  ococo.h  ococo_debug_counters.py  ococo_impl.h  ococo_misc.h  ococo_types.h  run.sh  stats.cpp  stats.h  test.bam
cmake-ext/: googletest.cmake  htslib.cmake  zlib.cmake
contrib/: .gitignore  googletest.cmake  htslib.cmake  zlib.cmake
ext/: .gitignore
figures/: Makefile
ides/: .gitignore
ides/eclipse/: generate.sh
ides/kdevelop/: generate.sh
ides/xcode/: generate.sh
misc/: debug_compare_counters.sh  ococo_debug_counters.py  ococo_test_bam.sh
scripts/: _ococo_debug_compare_vcf_pileup.py  install-boost.sh
src/: Makefile  bamfiles.h  caller.h  consensus.h  consensus_functions.h  consensus_params.cpp  consensus_params.h  counters.h  debugging.h  htslib  io.cpp  io.h  logfile.h  main.cpp  misc.cpp  misc.h  ococo.h  ococo_caller.h  ococo_misc.cpp  ococo_misc.h  ococo_params.cpp  ococo_params.h  ococo_stats.h  ococo_types.h  params.cpp  params.h  pileupfile.h  stats.h  types.h  vcffile.h  version.h
tests/: CMakeLists.txt  Makefile  test_aligned_reads_len1.sh  test_aligned_reads_len2.sh  test_no_parameters.sh  test_stats_import_export.sh  test_unaligned_reads.sh  tests.bats  tests.cpp
tests/01_test_unaligned/: Makefile
tests/data/: alignment_C_2.sam  fasta_NC.fa
tests/integration_tests/: integration_tests.bats  test_aligned_reads_len1.sh  test_aligned_reads_len2.sh  test_no_parameters.sh  test_stats_import_export.sh  test_unaligned_reads.sh
tests/integration_tests/data/: alignment_AA_1.sam  alignment_AA_unm.sam  alignments_AA_1.sam
tests/integration_tests/output/: .gitignore
tests/output/: .gitignore
tests/unit_tests/: CMakeLists.txt  unittests.cpp
tests/unittests/: .gitignore  CMakeLists.txt  tests.cpp  unittests.cpp
